examples/c/error-codes/undefined/UB-TDG11-bad-static.output
UB-TDG11-bad-static.c:5:12: error: static declaration of 'f' follows non-static declaration
static int f(void){
           ^
UB-TDG11-bad-static.c:3:5: note: previous declaration is here
int f(void);
    ^
1 error generated.
